mule-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mule-helloworld     
spec:
  selector:                  
    name: mule-helloworld
  ports:
  - nodePort: 0
    port: 80       
    protocol: TCP
    targetPort: 8181
