mule-dev-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: 'roundrobin'
    haproxy.router.openshift.io/disable_cookies: 'true'
    openshift.io/host.generated: 'true'
  name: mule-helloworld
spec:
  host: mule-hello-dev.osapps.192.168.121.44.nip.io
  to:
    kind: Service
    name: mule-helloworld
    weight: 100
  wildcardPolicy: None
